--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@
 	display: none;
 }
 
+#results {
+	margin: 20px 0 20px -170px;
+	width: 733px !important;
+}
+
 #results h4, #error h4 {
 	color: #5bc0de;
 }
@@ -22,4 +27,12 @@ h2 {
 
 h4 {
 	color: #5bc0de;
+}
+
+#slider {
+	margin: 10px 0;
+}
+
+#slider-percentages {
+	font-weight: bold;
 }
